Change application title to match game title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Radioactive Ladybugs!</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
